# factini

./: .gitignore  Cargo.toml  README.md  ideas.txt
html/: config.assets.md.js  config.belts.md.js  config.machines.md.js  config.md.js  config.supplydemandock.md.js  debug.html  examples.md.js  index.html  map.md.js  options.md.js  sprites.md.js
html/quests/: bucket_quest.md.js  dev.parts.md.js  dev.quests.md.js  maze.story.md.js
src/: _cli.rs  _web.rs  asset.rs  atom.rs  auto.rs  belt.rs  belt_codes.rs  belt_frame.rs  belt_meta.rs  belt_sprite.rs  belt_type.rs  belt_type2.rs  bouncer.rs  canvas.rs  cell.rs  cli_deserialize.rs  cli_serialize.rs  config.rs  craft.rs  demand.rs  direction.rs  examples.rs  factory.rs  floor.rs  init.rs  lib.rs  machine.rs  main.rs  maze.rs  offer.rs  options.rs  part.rs  paste.rs  port.rs  port_auto.rs  prio.rs  problems.rs  quest.rs  quest_state.rs  quick_save.rs  (+12 more)
