[package]
name = "factini"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 1
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 1 # 0 will fail with an overflow
embed-bitcode = "no" # faster
debug = true
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = true
overflow-checks = false
lto = "off" # skips an optimization step that is slow
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# TODO: copy compilation flags from https://betterprogramming.pub/how-to-pass-arrays-between-javascript-and-wasm-in-rust-9f2eeee7f2b6
[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "*"
wasm-bindgen = { version = "0.2", features = [] }
# these two are necessary for async in wasm in browser
wasm-bindgen-futures = "0.4.*"
js-sys = "0.3.*"
# enables dumping panics to console.log in js
console_error_panic_hook = "*"

# No support for target-specific lib and none is coming any time soon either: https://github.com/rust-lang/cargo/issues/4881
[lib]
# Error: crate-type must be cdylib to compile to wasm32-unknown-unknown. Add the following to your Cargo.toml file:
# meh?
crate-type = ["cdylib", "rlib"]
## can't find library `factini`, rename file to `src/lib.rs` or specify lib.path
## :facepalm:
path = "src/main.rs"

#[dependencies.js-sys]
#version = "0.3.*"
#features = [
#    'Date',
#]

[dependencies.web-sys]
version = "0.3.67"
features = [
    'console',
    'CanvasPattern',
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'DomRect', # for get_bounding_client_rect
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlLabelElement',
    'HtmlOptionElement',
    'HtmlSelectElement',
    'HtmlTextAreaElement',
    'MouseEvent',
    'Node',
    'Performance',
    'Storage', # local_storage
    'Touch', # touchevent.touches.get
    'TouchEvent',
    'TouchList', # touchevent.touches
    'Window',
]
